# zendata

./: Makefile  pyproject.toml
src/zendata/: __init__.py
src/zendata/data/ml/: base.py
src/zendata/data/ml/computer_vision/: detection.py
src/zendata/data/tasks/: base.py
src/zendata/data/text/: text.py
src/zendata/intputs/: base.py  files.py
src/zendata/intputs/medias/: audio.py  file.py  image.py  video.py
src/zendata/ml/inputs/: base.py
src/zendata/outputs/: ml.py
src/zendata/outputs/classification/: labels.py  sequences.py
src/zendata/tasks/: base.py  service.py
tests/src/zendata/data/tasks/: test_base_task.py
tests/src/zendata/ml/inputs/: test_audio_file_input.py  test_file_inputs.py  test_image_file_input.py
tests/src/zendata/tasks/: test_base_task.py  test_service_task.py  test_task_tasks.py
