[project]
name = "zendata"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "michou", email = "misu.helal-ali@interieur.gouv.fr" }
]
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.11.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
sources = ["src"]
